--- a/A6.md
+++ b/A6.md
@@ -1,22 +1,52 @@
-|      	| Route/URL                      	| Parameter 	| Number of Injection Trials 	| Number of Successful Trials 	|
-|------	|--------------------------------	|-----------	|----------------------------	|-----------------------------	|
-| Scan 	| http://127.0.0.1:8081/login    	| email     	| 15                         	| 0                           	|
-|      	|                                	| password  	| 15                         	| 0                           	|
-|      	| http://127.0.0.1:8081/register 	| email     	| 15                         	| 0                           	|
-|      	|                                	| name      	| 15                         	| 0                           	|
-|      	|                                	| password  	| 15                         	| 0                           	|
-|      	|                                	| password2 	| 15                         	| 0                           	|
-
-|      	| Route/URL                      	| Parameter 	| Number of Injection Trials 	| Number of Successful Trials 	|
-|------	|--------------------------------	|-----------	|----------------------------	|-----------------------------	|
-| Scan 	| http://127.0.0.1:8081/login    	| email     	| 15                         	| 0                           	|
-|      	|                                	| password  	| 15                         	| 0                           	|
-|      	| http://127.0.0.1:8081/register 	| email     	| 15                         	| 0                           	|
-|      	|                                	| name      	| 15                         	| 0                           	|
-|      	|                                	| password  	| 15                         	| 0                           	|
-|      	|                                	| password2 	| 15                         	| 0                           	|
+|      	| Route/URL                      	| Parameter       	| Number of Injection Trials 	| Number of Successful Trials 	|
+|------	|--------------------------------	|-----------------	|----------------------------	|-----------------------------	|
+| Scan 	| http://127.0.0.1:8081/         	| email           	| 15                         	| 0                           	|
+|      	|                                	| password        	| 15                         	| 0                           	|
+|      	| http://127.0.0.1:8081/register 	| email           	| 15                         	| 0                           	|
+|      	|                                	| name            	| 15                         	| 0                           	|
+|      	|                                	| password        	| 15                         	| 0                           	|
+|      	|                                	| password2       	| 15                         	| 0                           	|
+|      	| http://127.0.0.1:8081/update   	| name_update     	| 15                         	| 0                           	|
+|      	|                                	| quantity_update 	| 15                         	| 0                           	|
+|      	|                                	| price_update    	| 15                         	| 0                           	|
+|      	|                                	| expdate_update  	| 15                         	| 0                           	|
+|      	| http://127.0.0.1:8081/buy      	| name_buy        	| 15                         	| 0                           	|
+|      	|                                	| quantity_buy    	| 15                         	| 0                           	|
+|      	| http://127.0.0.1:8081/sell     	| name_sell       	| 15                         	| 0                           	|
+|      	|                                	| quantity_sell   	| 15                         	| 0                           	|
+|      	|                                	| price_sell      	| 15                         	| 0                           	|
+|      	|                                	| expdate_sell    	| 15                         	| 0                           	|
 
 
 1. All the user input fields were covered, and there  was no successful exploit, as both times, the program ended with "[20:08:13] [ERROR] all tested parameters do not appear to be injectable."
 
-2. Results were indifferent.
+2. Second one, with cookie, the program was able to check if all the forms within the user account page that is only accessible after a login.
+
+3. 
+    - 'AND boolean-based blind - WHERE or HAVING clause' checks for vulnerability involving AND
+    - 'Boolean-based blind - Parameter replace (original value)'
+    - 'MySQL >= 5.1 AND error-based - WHERE, HAVING, ORDER BY or GROUP BY clause (EXTRACTVALUE)'
+    - 'PostgreSQL AND error-based - WHERE or HAVING clause'
+    - 'Microsoft SQL Server/Sybase AND error-based - WHERE or HAVING clause (IN)'
+    - 'Oracle AND error-based - WHERE or HAVING clause (XMLType)'
+    - 'Generic inline queries'
+    - 'PostgreSQL > 8.1 stacked queries (comment)'
+    - 'Microsoft SQL Server/Sybase stacked queries (comment)'
+    - 'Oracle stacked queries (DBMS_PIPE.RECEIVE_MESSAGE - comment)'
+    - 'MySQL >= 5.0.12 AND time-based blind (query SLEEP)'
+    - 'PostgreSQL > 8.1 AND time-based blind'
+    - 'Microsoft SQL Server/Sybase time-based blind (IF)'
+    - 'Oracle AND time-based blind'
+    - 'Generic UNION query (NULL) - 1 to 10 columns'
+
+|      	| Route/URL                      	| Parameter       	| XSS Successful? 	|
+|------	|--------------------------------	|-----------------	|-----------------	|
+| Scan 	| http://127.0.0.1:8081/         	| password        	| No              	|
+|      	| http://127.0.0.1:8081/register 	| password        	| No              	|
+|      	| http://127.0.0.1:8081/sell     	| quantity_sell   	| Yes             	|
+|      	| http://127.0.0.1:8081/buy      	| quantity_buy    	| Yes             	|
+|      	| http://127.0.0.1:8081/update   	| quantity_update 	| Yes             	|
+
+1. By adding the session id, sell, buy, and update routes were checked.
+
+2. All links/routes were covered in the table above besides /logout. But since logout only accepts a button and only returns login page, I do not believe there could be any vulnerability to it.
